# OpenglESUtils

./: README.md
android/OpenglESUtils/: settings.gradle
android/OpenglESUtils/app/: build.gradle
android/OpenglESUtils/app/src/androidTest/java/cn/cxw/openglesutils/: ExampleInstrumentedTest.java
android/OpenglESUtils/app/src/main/: AndroidManifest.xml
android/OpenglESUtils/app/src/main/java/cn/cxw/openglesutils/: CaptureTestActivity.java  MainActivity.java  SurfaceViewPreview.java
android/OpenglESUtils/app/src/main/res/layout/: activity_capture_test.xml  activity_main.xml
android/OpenglESUtils/app/src/main/res/values/: strings.xml
android/OpenglESUtils/gradle/wrapper/: gradle-wrapper.properties
android/OpenglESUtils/openglesutils/: build.gradle
android/OpenglESUtils/openglesutils/src/androidTest/java/cn/cxw/openglesutils/: ExampleInstrumentedTest.java
android/OpenglESUtils/openglesutils/src/main/: AndroidManifest.xml
android/OpenglESUtils/openglesutils/src/main/java/cn/cxw/openglesutils/: GlProgram.java  GlTextureFrameBuffer.java  OpenglCommon.java  Rotation.java  TextureRotationUtil.java
android/OpenglESUtils/openglesutils/src/main/java/cn/cxw/openglesutils/egl/: EglBase.java  EglBase10.java  EglBase14.java
android/OpenglESUtils/openglesutils/src/main/java/cn/cxw/openglesutils/glthread/: GlRenderThread.java  GlThreadImageReader.java  GlThreadPreview.java  IPreviewView.java
android/OpenglESUtils/openglesutils/src/main/java/cn/cxw/openglesutils/openglcapture/: GraphicBufferCapture.java  OpenglCapture.java  ReadPixelCapture.java
android/OpenglESUtils/openglesutils/src/test/java/cn/cxw/openglesutils/: ExampleUnitTest.java
openglesutils/openglcapture/: CMakeLists.txt  OpenglCapture.cpp  OpenglCapture_JniWrap.cpp  build.sh
